[gd_scene load_steps=10 format=2]

[ext_resource path="res://script/options.gd" type="Script" id=1]
[ext_resource path="res://texture/titre.png" type="Texture" id=2]
[ext_resource path="res://font1.tres" type="DynamicFont" id=3]
[ext_resource path="res://Montserrat-ExtraBold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://texture/img_menu.png" type="Texture" id=5]
[ext_resource path="res://sound/click.wav" type="AudioStream" id=6]
[ext_resource path="res://anim/fade_in.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 4 )

[node name="Options_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
dropdown_path = NodePath("Options_conteneur/centre/Options/Taille_ecran/CenterContainer/WindowSize")
button_fullscreen = NodePath("Options_conteneur/centre/Options/Plein_ecran/CenterContainer/fullscreen")

[node name="Options_conteneur" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = 40.0
margin_right = -59.9999
margin_bottom = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titre" type="TextureRect" parent="Options_conteneur"]
margin_right = 1160.0
margin_bottom = 64.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="centre" type="HBoxContainer" parent="Options_conteneur"]
margin_top = 68.0
margin_right = 1160.0
margin_bottom = 604.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Options" type="VBoxContainer" parent="Options_conteneur/centre"]
margin_right = 578.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Music" type="HBoxContainer" parent="Options_conteneur/centre/Options"]
margin_right = 578.0
margin_bottom = 131.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="musique" type="Label" parent="Options_conteneur/centre/Options/Music"]
margin_top = 46.0
margin_right = 153.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Musique :"

[node name="CenterContainer" type="CenterContainer" parent="Options_conteneur/centre/Options/Music"]
margin_left = 157.0
margin_right = 233.0
margin_bottom = 131.0

[node name="musique" type="CheckButton" parent="Options_conteneur/centre/Options/Music/CenterContainer"]
margin_top = 45.0
margin_right = 76.0
margin_bottom = 85.0

[node name="Effets sonores" type="HBoxContainer" parent="Options_conteneur/centre/Options"]
margin_top = 135.0
margin_right = 578.0
margin_bottom = 266.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Options_conteneur/centre/Options/Effets sonores"]
margin_top = 46.0
margin_right = 243.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Effets sonores :"

[node name="CenterContainer" type="CenterContainer" parent="Options_conteneur/centre/Options/Effets sonores"]
margin_left = 247.0
margin_right = 323.0
margin_bottom = 131.0

[node name="son" type="CheckButton" parent="Options_conteneur/centre/Options/Effets sonores/CenterContainer"]
margin_top = 45.0
margin_right = 76.0
margin_bottom = 85.0

[node name="Taille_ecran" type="HBoxContainer" parent="Options_conteneur/centre/Options"]
margin_top = 270.0
margin_right = 578.0
margin_bottom = 401.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Options_conteneur/centre/Options/Taille_ecran"]
margin_top = 46.0
margin_right = 330.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Taille de la fenêtre :  "

[node name="CenterContainer" type="CenterContainer" parent="Options_conteneur/centre/Options/Taille_ecran"]
margin_left = 334.0
margin_right = 500.0
margin_bottom = 131.0
size_flags_vertical = 3

[node name="WindowSize" type="OptionButton" parent="Options_conteneur/centre/Options/Taille_ecran/CenterContainer"]
margin_top = 49.0
margin_right = 166.0
margin_bottom = 81.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "  1280 X 720  "
align = 1

[node name="Plein_ecran" type="HBoxContainer" parent="Options_conteneur/centre/Options"]
margin_top = 405.0
margin_right = 578.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Options_conteneur/centre/Options/Plein_ecran"]
margin_top = 46.0
margin_right = 196.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Plein écran :"

[node name="CenterContainer" type="CenterContainer" parent="Options_conteneur/centre/Options/Plein_ecran"]
margin_left = 200.0
margin_right = 276.0
margin_bottom = 131.0

[node name="fullscreen" type="CheckButton" parent="Options_conteneur/centre/Options/Plein_ecran/CenterContainer"]
margin_top = 45.0
margin_right = 76.0
margin_bottom = 85.0

[node name="image_jeu" type="TextureRect" parent="Options_conteneur/centre"]
margin_left = 582.0
margin_right = 1160.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
stretch_mode = 4

[node name="Retour" type="Button" parent="Options_conteneur"]
margin_top = 608.0
margin_right = 1160.0
margin_bottom = 640.0
custom_fonts/font = SubResource( 2 )
text = "Retour au menu"
flat = true

[node name="click" type="AudioStreamPlayer" parent="Options_conteneur/Retour"]
stream = ExtResource( 6 )

[node name="fadeIn" parent="." instance=ExtResource( 7 )]
visible = false
[connection signal="pressed" from="Options_conteneur/Retour" to="." method="_on_Retour_pressed"]
[connection signal="fade_finished" from="fadeIn" to="." method="_on_fadeIn_fade_finished"]
